--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     {% if page=='home' %}Welcome{% elif page=='signin' %}Sign Up{% elif page=='login' %}Login
     {% elif page=='edit' %}Edit Task{% else %}Dashboard{% endif %}
   </title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
