--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     {% if page=='home' %}Welcome{% elif page=='signin' %}Sign Up{% elif page=='login' %}Login
     {% elif page=='edit' %}Edit Task{% else %}Dashboard{% endif %}
   </title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-
 <script>
  (()=>{const t=localStorage.getItem('theme')||'dark';
         document.body.classList.toggle('light',t==='light')})();
@@ -50,7 +49,7 @@
   </form>
 
 {% elif page=='edit' %}
-  <form class="box" method="POST" action="/update/{{ doc['_id'] }}">
+  <form class="box edit-form" method="POST" action="/update/{{ doc['_id'] }}">
     <h2>Edit Task</h2>
     <input name="task" value="{{ doc.task }}" required>
     <textarea name="description" rows="3" placeholder="Description…">{{ doc.get('description','') }}</textarea>
@@ -69,7 +68,6 @@
     </div>
   </header>
 
-  <!-- Add Task -->
   <form class="box" method="POST" action="/add">
     <h2>New Task</h2>
     <input name="task" placeholder="Title…" required>
@@ -77,7 +75,6 @@
     <button class="btn full">Add Task</button>
   </form>
 
-  <!-- Task List -->
   <ul class="tasks">
   {% for task in tasks %}
     <li class="{{ 'done' if task.completed }}">
